[package]
name = "mir"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
description = "Idiomatic Rust API for building Wayland compositors with the Mir display server"
license = "GPL-2.0-or-later"
repository = "https://github.com/canonical/mir"
readme = "README.md"
keywords = ["mir", "wayland", "compositor", "window-manager", "tiling"]
categories = ["gui", "os"]

[dependencies]
mir-sys = { path = "../mir-rs-sys" }
bitflags = "2"
